--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
     </style>
   </head>
   <body>
-    <div class="box"></div>
+    <div class="box__wrapper">
+      <div class="box">
+        <div class="graphic">
+          <img src="./images/illustration-woman-online-desktop.svg" alt="" />
+        </div>
+        <div class="content">
+          <h1>FAQ</h1>
+        </div>
+      </div>
+    </div>
     <!--How many team members can I invite? You can invite up to 2 additional users
     on the Free plan. There is no limit on team members for the Premium plan.
     What is the maximum file upload size? No more than 2GB. All files in your
