images layout + mediaquery

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <div class="box__wrapper">
       <div class="box">
         <div class="graphic">
+          <img class="pattern" src="./images/bg-pattern-desktop.svg" alt="" />
           <img src="./images/illustration-woman-online-desktop.svg" alt="" />
         </div>
         <div class="content">
