--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </style>
   </head>
   <body>
+    <img class="box__img" src="./images/illustration-box-desktop.svg" alt="" />
     <div class="box__wrapper">
       <div class="box">
         <div class="graphic">
