--- a/index.html
+++ b/index.html
@@ -26,22 +26,54 @@
     </style>
   </head>
   <body>
-    <img class="box__img" src="./images/illustration-box-desktop.svg" alt="" />
     <div class="box__wrapper">
+      <img
+        class="box__img"
+        src="./images/illustration-box-desktop.svg"
+        alt=""
+      />
+
       <div class="box">
         <div class="graphic">
           <img class="pattern" src="./images/bg-pattern-desktop.svg" alt="" />
           <img src="./images/illustration-woman-online-desktop.svg" alt="" />
         </div>
+
         <div class="content">
           <h1>FAQ</h1>
+          <br /><br />
+          <div class="faq__wrapper">
+            <div class="faq">
+              <div class="question">
+                <p class="ques">How many team members can I invite?</p>
+                <img class="arrow" src="./images/icon-arrow-down.svg" alt="" />
+              </div>
+              <div class="answer">
+                <p class="answ">
+                  You can invite up to 2 additional users on the Free plan.
+                </p>
+              </div>
+              <br />
+              <!-- <hr style="border-top: 1px solid hsl(240, 6%, 50%)" /> -->
+              <!-- <br /> -->
+              <hr style="border-top: 1px solid hsl(240, 6%, 50%)" />
+              <div class="question">
+                <p class="ques">What is the maximum file upload size?</p>
+                <img class="arrow" src="./images/icon-arrow-down.svg" alt="" />
+              </div>
+              <div class="answer">
+                <p class="answ">
+                  No more than 2GB. All files in your account must fit your
+                  allotted storage space.
+                </p>
+              </div>
+            </div>
+          </div>
+          <br />
         </div>
       </div>
     </div>
-    <!--How many team members can I invite? You can invite up to 2 additional users
-    on the Free plan. There is no limit on team members for the Premium plan.
-    What is the maximum file upload size? No more than 2GB. All files in your
-    account must fit your allotted storage space. How do I reset my password?
+    <!-- How do I reset my password?
     Click “Forgot password” from the login page or “Change password” from your
     profile page. A reset link will be emailed to you. Can I cancel my
     subscription? Yes! Send us a message and we’ll process your request no
@@ -54,5 +86,6 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
     </div>-->
+    <script src="./index.js"></script>
   </body>
 </html>
